# rusty-kafka

./: Cargo.toml
event_router/: Cargo.toml
event_router/src/: args.rs  lib.rs
message_router/: Cargo.toml
message_router/src/: lib.rs
src/: main.rs
src/handlers/: example.rs  example2.rs  mod.rs
src/util/: kafka_router.rs  mod.rs
